# capiq_snowflake

./: .gitignore  README.md  db_client.py  pyproject.toml  remarks.md  test_run.py
sql_inventory/: financial_data_items.sql.j2  market_price.sql.j2
sql_inventory/estimates/: params.yaml  query.sql.j2
sql_inventory/financial_data_items/: params.yaml  query.sql.j2
sql_inventory/fundamental_id_lookup/: params.yaml  query.sql.j2
sql_inventory/list_tables/: params.yaml  query.sql.j2
sql_inventory/market_price/: params.yaml  query.sql.j2
sql_inventory/msci_index/: params.yaml  query.sql.j2
sql_inventory/msci_index_constituents/: params.yaml  query.sql.j2
sql_inventory/msci_index_price/: params.yaml  query.sql.j2
